// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recordToDom should create a value with formatting 1`] = `
<body>
  <em
    data-rich-text-format-boundary="true"
  >
    test
  </em>
  
</body>
`;

exports[`recordToDom should create a value with formatting for split tags 1`] = `
<body>
  <em
    data-rich-text-format-boundary="true"
  >
    test
  </em>
  
</body>
`;

exports[`recordToDom should create a value with formatting with attributes 1`] = `
<body>
  <a
    data-rich-text-format-boundary="true"
    href="#"
  >
    test
  </a>
  
</body>
`;

exports[`recordToDom should create a value with image object 1`] = `
<body>
  
  <img
    src=""
  />
  
</body>
`;

exports[`recordToDom should create a value with image object and formatting 1`] = `
<body>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <img
      src=""
    />
    
  </em>
  
</body>
`;

exports[`recordToDom should create a value with image object and text after 1`] = `
<body>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <img
      src=""
    />
    te
  </em>
  st
</body>
`;

exports[`recordToDom should create a value with image object and text before 1`] = `
<body>
  te
  <em>
    st
    <img
      src=""
    />
    
  </em>
  
</body>
`;

exports[`recordToDom should create a value with nested formatting 1`] = `
<body>
  <em>
    <strong
      data-rich-text-format-boundary="true"
    >
      test
    </strong>
  </em>
  
</body>
`;

exports[`recordToDom should create a value without formatting 1`] = `
<body>
  test
</body>
`;

exports[`recordToDom should create an empty value 1`] = `
<body>
  
  ﻿
</body>
`;

exports[`recordToDom should create an empty value from empty tags 1`] = `
<body>
  
  ﻿
</body>
`;

exports[`recordToDom should filter format boundary attributes 1`] = `
<body>
  <strong
    data-rich-text-format-boundary="true"
  >
    test
  </strong>
  
</body>
`;

exports[`recordToDom should handle br 1`] = `
<body>
  
  <br
    data-rich-text-line-break="true"
  />
  
  ﻿
</body>
`;

exports[`recordToDom should handle br with formatting 1`] = `
<body>
  <em
    data-rich-text-format-boundary="true"
  >
    
    <br
      data-rich-text-line-break="true"
    />
    
  </em>
  
  ﻿
</body>
`;

exports[`recordToDom should handle br with text 1`] = `
<body>
  te
  <br
    data-rich-text-line-break="true"
  />
  st
</body>
`;

exports[`recordToDom should handle double br 1`] = `
<body>
  a
  <br
    data-rich-text-line-break="true"
  />
  
  <br
    data-rich-text-line-break="true"
  />
  b
</body>
`;

exports[`recordToDom should handle empty list value 1`] = `
<body>
  <li>
    
    ﻿
  </li>
</body>
`;

exports[`recordToDom should handle empty multiline value 1`] = `
<body>
  <p>
    
    ﻿
  </p>
</body>
`;

exports[`recordToDom should handle middle empty list value 1`] = `
<body>
  <li>
    
    ﻿
  </li>
  <li>
    
    ﻿
  </li>
  <li>
    
    ﻿
  </li>
</body>
`;

exports[`recordToDom should handle multiline list value 1`] = `
<body>
  <li>
    one
    <ul>
      <li>
        a
      </li>
      <li>
        b
        <ol>
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ol>
      </li>
    </ul>
  </li>
  <li>
    three
  </li>
</body>
`;

exports[`recordToDom should handle multiline value 1`] = `
<body>
  <p>
    one
  </p>
  <p>
    two
  </p>
</body>
`;

exports[`recordToDom should handle multiline value with element selection 1`] = `
<body>
  <li>
    one
  </li>
</body>
`;

exports[`recordToDom should handle multiline value with empty 1`] = `
<body>
  <p>
    one
  </p>
  <p>
    
    ﻿
  </p>
</body>
`;

exports[`recordToDom should handle nested empty list value 1`] = `
<body>
  <li>
    
    ﻿
    <ul>
      <li>
        
        ﻿
      </li>
    </ul>
  </li>
</body>
`;

exports[`recordToDom should handle selection before br 1`] = `
<body>
  a
  <br
    data-rich-text-line-break="true"
  />
  
  <br
    data-rich-text-line-break="true"
  />
  b
</body>
`;

exports[`recordToDom should ignore formats at line separator 1`] = `
<body>
  <p>
    <em>
      one
    </em>
  </p>
  <p>
    <em>
      two
    </em>
    
  </p>
</body>
`;

exports[`recordToDom should preserve emoji 1`] = `
<body>
  🍒
</body>
`;

exports[`recordToDom should preserve emoji in formatting 1`] = `
<body>
  <em
    data-rich-text-format-boundary="true"
  >
    🍒
  </em>
  
</body>
`;

exports[`recordToDom should preserve non breaking space 1`] = `
<body>
  test  test
</body>
`;

exports[`recordToDom should remove padding 1`] = `
<body>
  
  ﻿
</body>
`;

exports[`recordToDom should replace characters to format HTML with space 1`] = `
<body>
   
</body>
`;
